crates/sui-prover/tests/snapshots/quantifiers/pool_multi.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/pool_multi.fail.move:17:5
   │
17 │     ensures(!result);
   │     ^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/pool_multi.fail.move:16: test_pool_multi_no_pool_spec
