crates/sui-prover/tests/snapshots/quantifiers/pool_needed.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/pool_needed.fail.move:17:5
   │
17 │     ensures(!result);
   │     ^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/pool_needed.fail.move:16: test_pool_needed_spec
